[kube-prometheus-stack] Add downward compatibility for Prometheus CRD field
Running the latest prom-stack versions on legacy OpenShift clusters with no influence on the preinstalled CRDs results in errors such as this:

failed to create typed patch object (..): .spec.automountServiceAccountToken: field not declared in schema

This patch provides a workaround using this values.yaml:

prometheus:
  prometheusSpec:
    automountServiceAccountToken: null

Signed-off-by: Johannes Schnatterer <johannes.schnatterer@cloudogu.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -17,7 +17,9 @@ metadata:
 {{ toYaml .Values.prometheus.annotations | indent 4 }}
 {{- end }}
 spec:
+{{- if not (eq .Values.prometheus.prometheusSpec.automountServiceAccountToken nil) }}
   automountServiceAccountToken: {{ .Values.prometheus.prometheusSpec.automountServiceAccountToken }}
+{{- end }}
 {{- if and (not .Values.prometheus.agentMode) (or .Values.prometheus.prometheusSpec.alertingEndpoints .Values.alertmanager.enabled) }}
   alerting:
     alertmanagers:
