Add deployment annotations, move pod to similar structure
Signed-off-by: cseeger-harris <cseeger@harriscomputer.com>

--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -129,9 +129,9 @@ tolerations: []
 
 affinity: {}
 
-annotations: {}
-
-podLabels: {}
+pod:
+  annotations: {}
+  labels: {}
 
 # Configurable health checks
 livenessProbe:
@@ -141,6 +141,11 @@ livenessProbe:
 readinessProbe:
   initialDelaySeconds: 5
   timeoutSeconds: 10
+
+# Labels and annotations to attach to the deployment resource
+deployment:
+  labels: {}
+  annotations: {}
 
 # ExtraEnvs
 extraEnvs:
