Move section next to pod
Signed-off-by: cseeger-harris <cseeger@harriscomputer.com>

--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -129,9 +129,15 @@ tolerations: []
 
 affinity: {}
 
+# Labels and annotations to attach to the pod resource
 pod:
   annotations: {}
   labels: {}
+
+# Labels and annotations to attach to the deployment resource
+deployment:
+  labels: {}
+  annotations: {}
 
 # Configurable health checks
 livenessProbe:
@@ -141,11 +147,6 @@ livenessProbe:
 readinessProbe:
   initialDelaySeconds: 5
   timeoutSeconds: 10
-
-# Labels and annotations to attach to the deployment resource
-deployment:
-  labels: {}
-  annotations: {}
 
 # ExtraEnvs
 extraEnvs:
