Revert "Add deployment annotations, move pod to similar structure"
This reverts commit 554756f1905dcd14b57a1b447a13ba419ce3a67e.

--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -129,9 +129,9 @@ tolerations: []
 
 affinity: {}
 
-pod:
-  annotations: {}
-  labels: {}
+annotations: {}
+
+podLabels: {}
 
 # Configurable health checks
 livenessProbe:
@@ -141,11 +141,6 @@ livenessProbe:
 readinessProbe:
   initialDelaySeconds: 5
   timeoutSeconds: 10
-
-# Labels and annotations to attach to the deployment resource
-deployment:
-  labels: {}
-  annotations: {}
 
 # ExtraEnvs
 extraEnvs:
