--- a/charts/prometheus-sql-exporter/templates/deployment.yaml
+++ b/charts/prometheus-sql-exporter/templates/deployment.yaml
@@ -4,13 +4,6 @@ metadata:
   name: {{ template "prometheus-sql-exporter.fullname" . }}
   labels:
     {{- include "prometheus-sql-exporter.labels" . | nindent 4 }}
-    {{- if .Values.deployment.labels }}
-    {{- toYaml .Values.deployment.labels | trim | nindent 4 }}
-    {{- end }}
-  {{- if .Values.deployment.annotations }}
-  annotations:  
-    {{- toYaml .Values.deployment.annotations | nindent 4 }}
-  {{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -20,13 +13,13 @@ spec:
     metadata:
       labels:
         {{- include "prometheus-sql-exporter.selectorLabels" . | nindent 8 }}
-      {{- if .Values.pod.labels }}
-{{ toYaml .Values.pod.labels | trim | indent 8 }}
+      {{- if .Values.podLabels }}
+{{ toYaml .Values.podLabels | trim | indent 8 }}
       {{- end }}
       annotations:
         kubectl.kubernetes.io/default-container: {{ .Chart.Name }}
-{{- if .Values.pod.annotations }}
-{{ toYaml .Values.pod.annotations | indent 8 }}
+{{- if .Values.annotations }}
+{{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
     spec:
       serviceAccountName: {{ template "prometheus-sql-exporter.serviceAccountName" . }}
