Correct line endings
Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>

--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -129,9 +129,15 @@ tolerations: []
 
 affinity: {}
 
-annotations: {}
+# Labels and annotations to attach to the pod resource
+pod:
+  annotations: {}
+  labels: {}
 
-podLabels: {}
+# Labels and annotations to attach to the deployment resource
+deployment:
+  labels: {}
+  annotations: {}
 
 # Configurable health checks
 livenessProbe:
