revert pod label changes to prevent breakage
Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>

--- a/charts/prometheus-sql-exporter/templates/deployment.yaml
+++ b/charts/prometheus-sql-exporter/templates/deployment.yaml
@@ -20,13 +20,13 @@ spec:
     metadata:
       labels:
         {{- include "prometheus-sql-exporter.selectorLabels" . | nindent 8 }}
-      {{- if .Values.pod.labels }}
-{{ toYaml .Values.pod.labels | trim | indent 8 }}
+      {{- if .Values.podLabels }}
+{{ toYaml .Values.podLabels | trim | indent 8 }}
       {{- end }}
       annotations:
         kubectl.kubernetes.io/default-container: {{ .Chart.Name }}
-{{- if .Values.pod.annotations }}
-{{ toYaml .Values.pod.annotations | indent 8 }}
+{{- if .Values.annotations }}
+{{ toYaml .Values.annotations | indent 8 }}
 {{- end }}
     spec:
       serviceAccountName: {{ template "prometheus-sql-exporter.serviceAccountName" . }}
