--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -129,10 +129,9 @@ tolerations: []
 
 affinity: {}
 
-# Labels and annotations to attach to the pod resource
-pod:
-  annotations: {}
-  labels: {}
+annotations: {}
+
+podLabels: {}
 
 # Labels and annotations to attach to the deployment resource
 deployment:
