[prometheus-stackdriver-exporter]: change liveness/readiness probe paths
Signed-off-by: Povilas Vaitkus <povilas.vaitkus@hostinger.com>

--- a/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
+++ b/charts/prometheus-stackdriver-exporter/templates/deployment.yaml
@@ -116,13 +116,13 @@ spec:
               name: http
           livenessProbe:
             httpGet:
-              path: /health
+              path: /
               port: http
             initialDelaySeconds: 30
             timeoutSeconds: 10
           readinessProbe:
             httpGet:
-              path: /health
+              path: /
               port: http
             initialDelaySeconds: 10
             timeoutSeconds: 10
