Add comment to affinity field
Signed-off-by: Marius Kimmina <marius@adjoe.io>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -408,7 +408,8 @@ hostSysFsMount:
   mountPropagation: ""
 
 ## Assign a group of affinity scheduling rules
-##
+## The default nodeAffinity excludes Fargate nodes and virtual kubelets from scheduling 
+## unless overriden by hard node affinity set in the field.
 affinity: {}
 #   nodeAffinity:
 #     requiredDuringSchedulingIgnoredDuringExecution:
