[prometheus-postgres-exporter] Use non default database in multi-targets
Signed-off-by: Thomas BRIEN <thomas.brien1990@gmail.com>

--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -47,7 +47,11 @@ spec:
   {{- end }}
       params:
         target:
+        {{- if .databaseName }}
+          - {{ .endpoint }}:{{ .port | default 5432 }}/{{ .databaseName | default "" }}
+        {{- else }}
           - {{ .endpoint }}:{{ .port | default 5432 }}
+        {{- end }}
         {{- if $.Values.serviceMonitor.multipleTarget.sharedAuthModule.enabled }}
         auth_module:
           - {{ $.Values.serviceMonitor.multipleTarget.sharedAuthModule.name }}
