--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -65,6 +65,7 @@ serviceMonitor:
       # - endpoint: pg01.local
       #   name: pg01 (there needs to exist an authModule with key "client.pg01" if not using sharedAuthModule)
       #   port: default 5432
+      #   databaseName: default '' (Set the database name to connect to)
 
 prometheusRule:
   enabled: false
