[prometheus-sql-exporter] Chore: Add deployment annotations (#5053)
* Add deployment annotations, move pod to similar structure

Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>

* move order to match pod

Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>

* revert pod label changes to prevent breakage

Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>

---------

Signed-off-by: cseeger-harris <97911100+cseeger-harris@users.noreply.github.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-sql-exporter/templates/deployment.yaml
+++ b/charts/prometheus-sql-exporter/templates/deployment.yaml
@@ -4,6 +4,13 @@ metadata:
   name: {{ template "prometheus-sql-exporter.fullname" . }}
   labels:
     {{- include "prometheus-sql-exporter.labels" . | nindent 4 }}
+    {{- if .Values.deployment.labels }}
+    {{- toYaml .Values.deployment.labels | trim | nindent 4 }}
+    {{- end }}
+  {{- if .Values.deployment.annotations }}
+  annotations:  
+    {{- toYaml .Values.deployment.annotations | nindent 4 }}
+  {{- end }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
