--- a/charts/prometheus-sql-exporter/values.yaml
+++ b/charts/prometheus-sql-exporter/values.yaml
@@ -133,6 +133,11 @@ annotations: {}
 
 podLabels: {}
 
+# Labels and annotations to attach to the deployment resource
+deployment:
+  annotations: {}
+  labels: {}
+
 # Configurable health checks
 livenessProbe:
   initialDelaySeconds: 3
