chore(prometheus-adapter): explicitly add image pull secrets in values.yaml
Signed-off-by: clavinjune <24659468+clavinjune@users.noreply.github.com>

--- a/charts/prometheus-adapter/values.yaml
+++ b/charts/prometheus-adapter/values.yaml
@@ -7,6 +7,8 @@ image:
   # if not set appVersion field from Chart.yaml is used
   tag: ""
   pullPolicy: IfNotPresent
+  pullSecrets: []
+    # - foo
 
 logLevel: 4
 
