--- a/charts/prometheus-mongodb-exporter/values.yaml
+++ b/charts/prometheus-mongodb-exporter/values.yaml
@@ -71,10 +71,17 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+# Customize securityContext of the pod.
+# See https://kubernetes.io/docs/concepts/policy/security-context/ for more.
+podSecurityContext: {}
+  # seccompProfile:
+  #  type: RuntimeDefault
+
 securityContext:
   allowPrivilegeEscalation: false
   capabilities:
-    drop: ["all"]
+    drop:
+      - ALL
   readOnlyRootFilesystem: true
   runAsGroup: 10000
   runAsNonRoot: true
