Correct example values.yaml
Signed-off-by: Joe Mifsud <joe@mifsud.me>

--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -1,10 +1,8 @@
 config: {}
 #  devices:
 #  - /dev/sda
-#  device_include:
-#  - /dev/sd.*
-#  device_include:
-#  - /dev/sr.*
+#  device_include: /dev/sd.*
+#  device_exclude: /dev/sr.*
 
 extraInstances: []
 # - config:
