--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -1,6 +1,8 @@
 config: {}
 #  devices:
 #  - /dev/sda
+#  device_include: /dev/sd.*
+#  device_exclude: /dev/sr.*
 
 extraInstances: []
 # - config:
@@ -38,9 +40,10 @@ prometheusRules:
 
 image:
   repository: quay.io/prometheuscommunity/smartctl-exporter
-  pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
+  pullPolicy: IfNotPresent
+  pullSecrets: []
 
 serviceAccount:
   # Specifies whether a service account should be created
