Correct and update comments at options
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -33,8 +33,8 @@ nginxServer: "http://{{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.lo
 
 # Arguments - https://github.com/nginxinc/nginx-prometheus-exporter#command-line-arguments
 options: {}
-  # -nginx.plus
-  # -nginx.retries int
+  # nginx.plus
+  # nginx.timeout: 5s
 
 livenessProbe:
   httpGet:
