Add an upgrade note
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -33,7 +33,7 @@ nginxServer: "http://{{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.lo
 
 # Arguments - https://github.com/nginxinc/nginx-prometheus-exporter#command-line-arguments
 options: {}
-  # nginx.plus
+  # nginx.plus:
   # nginx.timeout: 5s
 
 livenessProbe:
@@ -56,7 +56,6 @@ service:
   annotations: {}
 
 podAnnotations: {}
-
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
