Insert namespaceOverride in values.yaml
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -27,6 +27,9 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+# Overide deployment namespace
+namespaceOverride: ""
+
 # Add your nginx server details here
 nginxServer: "http://{{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.local:8080/stub_status"
 # nginxServer: "http://frontend.default.svc.cluster.local:8080/stub_status"
