[prometheus-nginx-exporter] bump to 1.4.0 (#5093)
* bump to 1.4.0

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

* Add an option in CI test case

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Correct and update comments at options

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Use new flag format

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Add an upgrade note

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Insert namespaceOverride in values.yaml

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

* Set app version label from image tag first if present

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

---------

Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>
Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -27,14 +27,17 @@ image:
 nameOverride: ""
 fullnameOverride: ""
 
+# Overide deployment namespace
+namespaceOverride: ""
+
 # Add your nginx server details here
 nginxServer: "http://{{ .Release.Name }}.{{ .Release.Namespace }}.svc.cluster.local:8080/stub_status"
 # nginxServer: "http://frontend.default.svc.cluster.local:8080/stub_status"
 
 # Arguments - https://github.com/nginxinc/nginx-prometheus-exporter#command-line-arguments
 options: {}
-  # -nginx.plus
-  # -nginx.retries int
+  # nginx.plus:
+  # nginx.timeout: 5s
 
 livenessProbe:
   httpGet:
@@ -56,7 +59,6 @@ service:
   annotations: {}
 
 podAnnotations: {}
-
 
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
