[kube-state-metrics] add additional environment variables support.
Signed-off-by: Lan <gcslyp@gmail.com>

--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -160,6 +160,13 @@ serviceAccount:
   # If false then the user will opt out of automounting API credentials.
   automountServiceAccountToken: true
 
+# Additional Environment variables
+env: {}
+  # - name: GOMAXPROCS
+  #   valueFrom:
+  #     resourceFieldRef:
+  #       resource: limits.cpu
+
 prometheus:
   monitor:
     enabled: false
