[prometheus-push-gateway] Add lifecycle hooks
Fixes #5102

Add support for lifecycle hooks in the push-gateway deployment.

* Add lifecycle hooks configuration to `charts/prometheus-pushgateway/templates/deployment.yaml`
* Add lifecycle hooks configuration to `charts/prometheus-pushgateway/templates/statefulset.yaml`
* Add lifecycle hooks configuration options in `charts/prometheus-pushgateway/values.yaml`

Signed-off-by: Duncan Schulze <13733349+duncaan@users.noreply.github.com>

--- a/charts/prometheus-pushgateway/templates/statefulset.yaml
+++ b/charts/prometheus-pushgateway/templates/statefulset.yaml
@@ -22,6 +22,8 @@ spec:
         {{- include "prometheus-pushgateway.defaultLabels" . | nindent 8 }}
     spec:
       {{- include "prometheus-pushgateway.podSpec" . | nindent 6 }}
+      lifecycle:
+        {{- toYaml .Values.lifecycle | nindent 8 }}
   {{- if .Values.persistentVolume.enabled }}
   volumeClaimTemplates:
     - metadata:
