--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -369,3 +369,9 @@ networkPolicy: {}
 # Array of extra K8s objects to deploy (evaluated as a template)
 # The value can hold an array of strings as well as objects
 extraManifests: []
+
+# Lifecycle hooks configuration
+lifecycle: {}
+#  preStop:
+#    exec:
+#      command: ["/bin/sh", "-c", "sleep 30"]
