--- a/charts/prometheus-pushgateway/templates/deployment.yaml
+++ b/charts/prometheus-pushgateway/templates/deployment.yaml
@@ -25,6 +25,8 @@ spec:
         {{- include "prometheus-pushgateway.defaultLabels" . | nindent 8 }}
     spec:
       {{- include "prometheus-pushgateway.podSpec" . | nindent 6 }}
+      {{- with .Values.lifecycle}}
       lifecycle:
-        {{- toYaml .Values.lifecycle | nindent 8 }}
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
 {{- end }}
