remove extra dash
Signed-off-by: Alexandre Joris <alexandre.joris@qonto.co>

--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
@@ -43,7 +43,7 @@ items:
       relabelings:
 {{ toYaml .relabelings | indent 8 }}
     {{- end }}
-    {{- if .fallbackScrapeProtocol -}}
+    {{- if .fallbackScrapeProtocol }}
       fallbackScrapeProtocol: {{ .fallbackScrapeProtocol }}
     {{- end }}
 {{- end }}
