[kube-prometheus-stack] Added fallbackScrapeProtocol option to additionalServiceMonitors and additionalPodMonitors (#5108)
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Co-authored-by: Duncan Schulze <13733349+duncaan@users.noreply.github.com>
Co-authored-by: Alexandre Joris <alexandre.joris@qonto.co>
Co-authored-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
@@ -43,5 +43,8 @@ items:
       relabelings:
 {{ toYaml .relabelings | indent 8 }}
     {{- end }}
+    {{- if .fallbackScrapeProtocol }}
+      fallbackScrapeProtocol: {{ .fallbackScrapeProtocol }}
+    {{- end }}
 {{- end }}
 {{- end }}
