feat(prometheus-stack): Add lifecyle and terminationGracePeriodSeconds settings to prometheus-operator
Signed-off-by: AviorSchreiber <80765239+AviorSchreiber@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2718,6 +2718,10 @@ prometheusOperator:
     automountServiceAccountToken: true
     annotations: {}
 
+  # -- terminationGracePeriodSeconds for container lifecycle hook
+  terminationGracePeriodSeconds: 30
+  # -- Specify lifecycle hooks for the  controller
+  lifecycle: {}
   ## Configuration for Prometheus operator service
   ##
   service:
