feat(prometheus-mysql-exporter): Introduce an ability to set additional env. variables
Signed-off-by: Roman Slipchenko <roman.slipchenko@restream.io>

--- a/charts/prometheus-mysql-exporter/templates/deployment.yaml
+++ b/charts/prometheus-mysql-exporter/templates/deployment.yaml
@@ -91,6 +91,17 @@ spec:
                   key: {{ .Values.mysql.existingPasswordSecret.key }}
           {{- end }}
           {{- end }}
+          {{- with .Values.extraEnvs }}
+          {{- if kindIs "map" . }}
+          {{- range $name, $value := . }}
+          - name: {{ $name }}
+            value: {{ tpl $value $ | quote }}
+          {{- end }}
+          {{- end }}
+          {{- if kindIs "slice" . -}}
+          {{ toYaml . | nindent 10 }}
+          {{- end }}
+          {{- end }}
           ports:
             - containerPort: {{ .Values.service.internalPort }}
           livenessProbe:
