--- a/charts/prometheus-mysql-exporter/values.yaml
+++ b/charts/prometheus-mysql-exporter/values.yaml
@@ -106,6 +106,15 @@ extraVolumes: []
 #   configMap:
 #     name: example
 
+# ExtraEnvs
+extraEnvs: []
+  # - name: EXTRA_ENV
+  #   value: value
+  # - name: POD_NAMESPACE
+  #   valueFrom:
+  #     fieldRef:
+  #       fieldPath: metadata.namespace
+
 podSecurityContext: {}
   # fsGroup: 65534
 
