--- a/charts/prometheus-windows-exporter/templates/service.yaml
+++ b/charts/prometheus-windows-exporter/templates/service.yaml
@@ -5,17 +5,13 @@ metadata:
   namespace: {{ include "prometheus-windows-exporter.namespace" . }}
   labels:
     {{- include "prometheus-windows-exporter.labels" $ | nindent 4 }}
-  {{- if or .Values.prometheus.monitor.enabled .Values.prometheus.podMonitor.enabled }}
   {{- with .Values.service.annotations }}
   annotations:
-    {{- unset . "prometheus.io/scrape" | toYaml | nindent 4 }}
-  {{- end }}
-  {{- else }}
-  annotations:
-    prometheus.io/scrape: "true"
-  {{- with .Values.service.annotations }}
-    {{- toYaml . | nindent 4 }}
-  {{- end }}
+    {{- if or $.Values.prometheus.monitor.enabled $.Values.prometheus.podMonitor.enabled }}
+      {{- unset . "prometheus.io/scrape" | toYaml | nindent 4 }}
+    {{- else }}
+      {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- end }}
 spec:
   type: {{ .Values.service.type }}
