--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -36,12 +36,21 @@ global:
   # Allow parent charts to override registry hostname
   imageRegistry: ""
 
+## Service configuration
 service:
+  ## Service type
   type: ClusterIP
+  ## Default service port. Sets the port of the exposed container as well (windows-exporter).
   port: 9182
+  ## Port number for service type NodePort
   nodePort:
+  ## Name of the service port. Sets the port name of the main container (windows-exporter) as well.
   portName: metrics
-  annotations: {}
+  ## Additional annotations and labels for the service.
+  ## If prometheus.monitor.enabled or prometheus.podMonitor.enabled is true, the prometheus.io/scrape annotation will
+  ## not be set.
+  annotations:
+    prometheus.io/scrape: "true"
 
 # Additional environment variables that will be passed to the daemonset
 env: {}
