Add hypen to strip the space before.
Signed-off-by: Mehrshad Lotfi <mehrshad.lotfi@optiop.org>

--- a/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/servicemonitors.yaml
@@ -23,11 +23,11 @@ items:
     {{- end }}
     {{- if .metricRelabelings }}
           metricRelabelings:
-            {{ toYaml .metricRelabelings | nindent 12 }}
+            {{- toYaml .metricRelabelings | nindent 12 }}
     {{- end }}
     {{- if .relabelings }}
           relabelings:
-            {{ toYaml .relabelings | nindent 12 }}
+            {{- toYaml .relabelings | nindent 12 }}
     {{- end }}
 
     {{- if .namespaceSelector }}
