--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -89,11 +89,11 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
 readinessProbe:
   httpGet:
-    path: /health
+    path: /
     port: http
 
 service:
@@ -152,7 +152,7 @@ configmapReload:
   ##
   image:
     repository: quay.io/prometheus-operator/prometheus-config-reloader
-    tag: v0.71.2
+    tag: v0.79.2
     pullPolicy: IfNotPresent
 
   ## configmap-reload resource requests and limits
