update codeowners file
Signed-off-by: Cristian Greco <cristian@regolo.cc>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -53,3 +53,4 @@
 /charts/prometheus-systemd-exporter/ @capuche2412 @maxime1907
 /charts/prometheus-to-sd/ @acondrat
 /charts/prometheus-windows-exporter/ @jkroepke
+/charts/prometheus-yet-another-cloudwatch-exporter/ @cristiangreco @thomaspeitz
