--- a/charts/prometheus-yet-another-cloudwatch-exporter/Chart.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/Chart.yaml
@@ -6,11 +6,16 @@ version: 0.38.0
 appVersion: "v0.61.2"
 home: https://github.com/nerdswords/helm-charts
 sources:
-- https://github.com/nerdswords/yet-another-cloudwatch-exporter
+  - https://github.com/nerdswords/yet-another-cloudwatch-exporter
 keywords:
-- aws
-- cloudwatch
-- prometheus
-- exporter
-- yet-another-cloudwatch-exporter
-- yace
+  - aws
+  - cloudwatch
+  - prometheus
+  - exporter
+  - yet-another-cloudwatch-exporter
+  - yace
+maintainers:
+  - name: cristiangreco
+    email: cristian.greco@grafana.com
+  - name: thomaspeitz
+    email: info@thomas-peitz.de
