[kube-prometheus-stack] Add kubelet scrape flag
Add a boolean flag to control scrape of the Kubelet's `/metrics`
endpoint. This is useful for K3s users. With K3s, the kubelet metrics
duplicate the apiserver endpoint due to the shared metrics registry.

Signed-off-by: SuperQ <superq@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -1315,6 +1315,9 @@ kubelet:
   namespace: kube-system
 
   serviceMonitor:
+    ## Enable scraping /metrics from kubelet's service
+    kubelet: true
+
     ## Attach metadata to discovered targets. Requires Prometheus v2.45 for endpoints created by the operator.
     ##
     attachMetadata:
