update urls and bump versions
Signed-off-by: Cristian Greco <cristian@regolo.cc>

--- a/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  registry: ghcr.io
-  repository: nerdswords/yet-another-cloudwatch-exporter
+  registry: quay.io
+  repository: prometheuscommunity/yet-another-cloudwatch-exporter
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
