Remove prometheus.io/scrape as a default annotation
Signed-off-by: Pete Wall <pete.wall@grafana.com>

--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -49,8 +49,7 @@ service:
   ## Additional annotations and labels for the service.
   ## If prometheus.monitor.enabled or prometheus.podMonitor.enabled is true, the prometheus.io/scrape annotation will
   ## not be set.
-  annotations:
-    prometheus.io/scrape: "true"
+  annotations: {}
 
 # Additional environment variables that will be passed to the daemonset
 env: {}
