[prometheus-windows-exporter] Extract the prometheus.io/scrape service annotation (#5132)

--- a/charts/prometheus-windows-exporter/values.yaml
+++ b/charts/prometheus-windows-exporter/values.yaml
@@ -36,11 +36,17 @@ global:
   # Allow parent charts to override registry hostname
   imageRegistry: ""
 
+## Service configuration
 service:
+  ## Service type
   type: ClusterIP
+  ## Default service port. Sets the port of the exposed container as well (windows-exporter).
   port: 9182
+  ## Port number for service type NodePort
   nodePort:
+  ## Name of the service port. Sets the port name of the main container (windows-exporter) as well.
   portName: metrics
+  ## Additional annotations and labels for the service.
   annotations: {}
 
 # Additional environment variables that will be passed to the daemonset
