[kube-prometheus-stack] upgrade CRDs using helm
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>
Signed-off-by: Jan-Otto Kröpke <joe@cloudeteer.de>
Signed-off-by: Jan-Otto Kröpke <mail@jkroepke.de>

--- a/charts/kube-prometheus-stack/charts/crds/templates/upgrade/clusterrole.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/templates/upgrade/clusterrole.yaml
@@ -22,14 +22,7 @@ rules:
       - get
       - list
     resourceNames:
-      - alertmanagerconfigs.monitoring.coreos.com
-      - alertmanagers.monitoring.coreos.com
-      - podmonitors.monitoring.coreos.com
-      - probes.monitoring.coreos.com
-      - prometheusagents.monitoring.coreos.com
-      - prometheuses.monitoring.coreos.com
-      - prometheusrules.monitoring.coreos.com
-      - scrapeconfigs.monitoring.coreos.com
-      - servicemonitors.monitoring.coreos.com
-      - thanosrulers.monitoring.coreos.com
+      {{- range $path, $_ := $.Files.Glob "crds/*.yaml" }}
+      - {{ ($.Files.Get $path | fromYaml ).metadata.name }}
+      {{- end }}
 {{- end }}
